--- a/wiki/NitroTrackerDevelopmentSetup.wiki
+++ b/wiki/NitroTrackerDevelopmentSetup.wiki
@@ -2,7 +2,7 @@
 
 == 1. Set up the devkitPro toolchain ==
 
-In order to develop anything for the Nintendo DS, you need the devkitPro cross-compilation toolchain. Please follow the [http://wiki.devkitpro.org/index.php/Getting_Started/devkitARM installation instructions] on the [http://www.devkitpro.org/ devkitPro webpage]. Yes, you do need all those libraries, except for maxmod and libfilesystem.
+In order to develop anything for the Nintendo DS, you need the devkitPro cross-compilation toolchain. To set it up, please follow the [http://wiki.devkitpro.org/index.php/Getting_Started/devkitARM installation instructions] on the [http://www.devkitpro.org/ devkitPro webpage]. Yes, you do need all those libraries, except for maxmod and libfilesystem.
 
 Since some updates of the devkitPro libraries have API changes, here's a list of the latest library versions tested to work with NitroTracker:
 
