--- a/wiki/NitroTrackerDevelopmentSetup.wiki
+++ b/wiki/NitroTrackerDevelopmentSetup.wiki
@@ -35,7 +35,7 @@ If you like the bleeding edge better, you can alternatively get the SVN version 
 
 http://code.google.com/p/dsmi/source/checkout
 
-== Getting the NitroTracker source and setting it up ==
+== 3. Getting the NitroTracker source and setting it up ==
 
 As you might have guessed, you can get NitroTracker's source from here:
 
@@ -69,11 +69,11 @@ make
 
 should compile everything and leave you with a nice nitrotracker.nds
 
-== 3. DLDI (optional) ==
+== 4. DLDI (optional) ==
 
 Testing NitroTracker on your DS requires patching with a [http://chishm.drunkencoders.com/DLDI/ DLDI] patch. This patcher adds support for your specific flashcard to an nds binary that uses libfat. Chances are your flashcart supports DLDI patching out of the box and you don't have to do anything to be able to access the file system. If this isn't the case, get a DLDI patcher for your OS and a patch for your flashcard from [http://dldi.drunkencoders.com here]. You can then add a custom Makefile target (see below) to do all the patching for you.
 
-== 4. Emulators (optional) ==
+== 5. Emulators (optional) ==
 
 DS Emulators suck! Really, just don't trust them. Things that work on the hardware will not work on emulators. Things that work on emulators will not work on the hardware. When you test your DS software using only emulators, you're doomed!
 
@@ -84,7 +84,7 @@ That said, if you're cautious, emulators can be useful for quick tests. But reme
 
 But as I said, better not use them.
 
-== 5. Defining custom Makefile targets ==
+== 6. Defining custom Makefile targets ==
 
 You can create custom targets for DLDI patching, copying to flashcards, or running in an emulator. In order to do this, please do not edit the main Makefile (because then settings that only apply to you would be committed to the repository). Instead, create a file called *mytargets.mk* in the NitroTracker directory. This file in included in the main Makefile, so targets you add there are available when building. Here's an example target for DLDI patching and copying to a GBAMP:
 
